static/docs/1.2.1/api/python/_sources/generated/gravitino.client.relational_table.RelationalTable.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.client.relational\_table.RelationalTable
==================================================

.. currentmodule:: gravitino.client.relational_table

.. autoclass:: RelationalTable
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~RelationalTable.__init__
      ~RelationalTable.add_partition
      ~RelationalTable.audit_info
      ~RelationalTable.columns
      ~RelationalTable.comment
      ~RelationalTable.distribution
      ~RelationalTable.drop_partition
      ~RelationalTable.get_partition
      ~RelationalTable.index
      ~RelationalTable.list_partition_names
      ~RelationalTable.list_partitions
      ~RelationalTable.name
      ~RelationalTable.partitioning
      ~RelationalTable.properties
      ~RelationalTable.sort_order
   
   

   
   
   